--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ Author:
 body {
   background-image: url("image/bodyback.png");
   background-size: cover;
-  height: 500vh;
+  height: 15000px;
   width: 110vw;
+  font-weight:bold;
 }
 ol {
   list-style-type: none;
@@ -23,6 +24,7 @@ main {
 .header_box {
   text-align: center;
   width: 100%;
+  margin-top:20px;
 }
 
 .upper_line {
@@ -48,13 +50,25 @@ main {
 
 .page1_message_2 {
   margin: 0 10% 3%;
-  font-size: 2rem;
+  font-size: 2.5rem;
   float: left;
   height: 80px;
   width: 40%;
 }
 .page1_message_2_1 {
   font-size: 6rem;
+  font-weight: bold;
+  text-shadow: 7px 7px 3px #808080; 
+  text-decoration:underline;
+  text-decoration-color:white;
+  text-decoration-thickness: 40px;
+  text-decoration-skip-ink: none;
+  text-underline-offset: -50px;
+  
+}
+.page1_message_2_2{
+  font-weight:bold;
+  line-height:4rem
 }
 
 .page1_message_4 {
@@ -66,15 +80,23 @@ main {
   text-align: center;
 }
 .page1_message_4_title_1 {
+  font-weight:bold;
   width: 70%;
   margin: 0 15%;
-  font-size: 2rem;
+  font-size: 2.3rem;
   border-bottom: solid 1.5px #777777;
   padding-bottom: 5px;
 }
 .page1_message_4_title_1_1 {
-  font-size: 1.2rem;
+  font-weight:bold;
+  font-size: 1.3rem;
   margin: 5px;
+}
+.page1_message_4_title_1_2 {
+  font-weight:bold;
+  font-size: 1.3rem;
+  margin: 5px;
+  color:red;
 }
 .page1_message_4_title_li {
   margin: 20px 0;
@@ -83,12 +105,10 @@ main {
 .page1_message_5 {
   position: absolute;
   left: 15%;
-  top: 40%;
-}
-.page1_message_5 {
-  font-size: 1.8rem;
-  padding: 10px 30px;
-  background-color: #0099ff;
+  top: 890px;
+  font-size: 2.0rem;
+  padding: 20px 60px;
+  background-color: #0071BB;
   color: white;
   border: solid 3px white;
   border-radius: 10px;
@@ -100,18 +120,24 @@ main {
   left: 15%;
   margin-left: -15px;
   border: 15px solid transparent;
-  border-bottom: 15px solid #0099ff;
+  border-bottom: 15px solid #0071BB;
+}
+.page1_message_image{
+  position: absolute;
+  left: 64%;
+  top: 620px;
 }
 
 .page1_message_6 {
   font-size: 2rem;
   margin: 10px 0 10px 15%;
+  font-weight: bold;
 }
 .page1_message_6_1 {
   color: red;
   font-size: 2.8rem;
-  -webkit-text-emphasis: filled circle red;
-  text-emphasis: filled circle red;
+  -webkit-text-emphasis: filled circle #BF2D32;
+  text-emphasis: filled circle #BF2D32;
 }
 
 .page1_message_6_table {
@@ -124,15 +150,16 @@ main {
 .page2_message_2 {
   text-align: center;
   margin-top: 300px;
-  font-size: 2rem;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .page2_message_2_1 {
-  color: #0099ff;
+  color: blue;
 }
 .page2_message_2_2 {
-  font-size: 2.5rem;
-  color: #0099ff;
+  font-size: 2.8rem;
+  color: blue;
 }
 .page2_message_2_3 {
   color: red;
@@ -141,11 +168,18 @@ main {
   font-size: 1.5rem;
 }
 .page2_message_2_5 {
-  font-size: 2.5rem;
+  font-size: 2.8rem;
+  text-decoration : underline;
+  text-decoration-color:white;
+  text-decoration-thickness: 20px;
+  text-decoration-skip-ink: none;
+  text-underline-offset: -25px;
+ 
 }
 .page2_message_2_6 {
   font-size: 1rem;
 }
+
 
 .page2_message_3 {
   text-align: center;
@@ -158,7 +192,7 @@ main {
 
 .page2_message_3_title {
   text-align: center;
-  font-size: 1.7rem;
+  font-size: 3rem;
 }
 .page2_message_3_title_line {
   margin: 10px 40%;
@@ -169,12 +203,12 @@ main {
 .page2_message_3_1 {
   color: white;
 
-  background-color: #0099ff;
+  background-color: #0071BB;
   margin: 3% 7%;
   padding: 1% 7%;
   text-align: center;
   border-radius: 60px;
-  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 .page2_message_3_1_1 {
   /* font-size: 2.2rem; */
@@ -190,6 +224,7 @@ main {
   background-color: white;
   width: 420px;
   margin: 0 30%;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 .page2_message_3_image_1 {
   margin: 10px;
@@ -201,7 +236,7 @@ main {
   background-color: #0099ff;
   padding: 5% 1%;
   color: white;
-  top: 2400px;
+  top: 2500px;
   left: 13%;
   border-radius: 20px;
 }
@@ -225,11 +260,18 @@ main {
 }
 
 .page2_message_4 {
-  margin-top: 200px;
+  margin: 350px 0;
 }
 
 .page2_message_4_image {
-  margin-top: 100px;
+  margin-top: 60px;
+  padding: 10px;
+  background-color: white;
+  margin: 40px 20%;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+.page2_message_4_image_1 {
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 .page2_message_3_abusolute_1 {
@@ -238,3 +280,466 @@ main {
 .page2_message_3_abusolute_2 {
   color: red;
 }
+
+.page2_message_4 {
+  text-align: center;
+}
+
+.page2_message_4_1 {
+  color: white;
+  background-color: #0071BB;
+  margin: 3% 7%;
+  padding: 1% 3%;
+  text-align: center;
+  border-radius: 60px;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+.page2_message_4_1_1 {
+  /* font-size: 2.2rem; */
+  font-size: 1.6rem;
+  /* display: table-cell; */
+  list-style-image: url("image/fin.png");
+  /* padding-left:15px; */
+  line-height: 10px;
+}
+.page2_message_4_2 {
+  margin-top: 80px;
+  font-size: 1.6rem;
+}
+
+.page2_message_4_abusolute {
+  font-size: 1.2rem;
+  position: absolute;
+  background-color: #0099ff;
+  padding: 5% 1%;
+  color: white;
+  top: 3440px;
+  left: 7%;
+  border-radius: 20px;
+  width: 95%;
+}
+
+.page2_message_4_abusolute:before {
+  border: solid transparent;
+  content: "";
+  height: 0;
+  width: 0;
+  pointer-events: none;
+  position: absolute;
+  border-color: rgba(0, 153, 255, 0);
+  border-top-width: 42px;
+  border-bottom-width: 42px;
+  border-left-width: 49px;
+  border-right-width: 49px;
+  margin-left: -49px;
+  border-bottom-color: #0099ff;
+  bottom: 100%;
+  left: 47%;
+}
+
+.page2_message_4_abusolute_1 {
+  color: red;
+}
+
+.page2_message_4_5 {
+  color: white;
+  background-color: #0071BB;
+  margin: 3% 30%;
+  padding: 1% 3%;
+  text-align: center;
+  border-radius: 60px;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.page3_message_box {
+  margin: 50px 5% 30px 5%;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 20px;
+  padding:10px 0 40px 0;
+}
+
+.page3_message_title {
+  padding-top: 20px;
+  font-size: 3rem;
+}
+
+.page3_message_title_sub {
+  margin: 10px 20%;
+  font-size: 1.5rem;
+  background-color: #0071BB;
+  color: white;
+  border-radius: 10px;
+  padding:10px;
+}
+.page3_message_1 {
+  font-size: 3.4rem;
+}
+.page3_message_1_1 {
+  font-size: 3.4rem;
+}
+.price8000{
+  background-image:url("image/line.png");
+  background-repeat:repeat-x;
+  background-position: center;
+}
+.page3_message_2 {
+  font-size: 2rem;
+}
+.page3_message_2_1 {
+  margin: 10px 30% 20px 0;
+}
+
+.page3_message_3__ {
+  font-size: 3.5rem;
+}
+
+.page3_message_3_1_img{
+  padding-right:10px;
+}
+.price2980{
+  color:red;
+}
+
+.page3_message_3_image{
+  position: absolute;
+  left: 75%;
+  top:4510px;
+}
+
+.page3_message_3_{
+  margin:20px 10%;
+  padding:40px;
+  color:white;
+  background-color: hotpink;
+  font-size:2rem;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+}
+
+.page3_message_2_{
+  font-size:2.5rem;
+  margin: 60px 5% 40px 5%;
+  padding:20px;
+  color:white;
+  background-color: #0071BB;
+  border-radius: 60px;
+}
+
+.No{
+  display:inline-block;
+  font-size: 3rem;
+  color:white;
+  background-color: #0071BB;
+  padding:25px;
+  border-radius: 150px;
+}
+.page3_message_3{
+  font-size:2rem;
+  margin: 20px 5% 30px 5%;
+  padding:20px;
+  background-color: white;
+  border-radius: 60px;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+.page3_message_4{
+  font-size:2rem;
+  margin:20px 5%;
+  color:white;
+  border-radius: 30px;
+  background-color: #0071BB;
+  padding:10px 15%;
+}
+.page3_message_4_1{
+  text-align: left;
+}
+.page3_message_4_2{
+  text-align: right;
+}
+
+.page3_message_5{
+  margin:20px 0;
+  font-size:1.8rem;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding:20px 0;
+}
+.page3_message_5_1{
+  color:red;
+}
+.page3_message_6_title{
+  margin:20px 0 0 0;
+  color:red;
+  font-size:2.4rem;
+  text-decoration : underline;
+  text-decoration-color:white;
+  text-decoration-thickness: 20px;
+  text-decoration-skip-ink: none;
+  text-underline-offset: -25px;
+}
+
+.page3_message_6{
+  font-size: 1.6rem;
+  margin:40px 0 30px 0;
+}
+
+.page3_message_8{
+  margin: 40px 0 30px 0;
+  font-size:1.5rem;
+}
+.page3_message_8_1{
+  margin-top: 25px;
+  color:red;
+}
+
+.page3_message_9{
+  font-size:2.2rem;
+  margin-bottom: 60px;
+}
+
+.page4_message_1{
+  font-size: 2.1rem;
+  margin: 20px 5%;
+  color: white;
+  border-radius: 30px;
+  background-color: #0071BB;
+  padding: 20px 15%;
+}
+.page4_message_1_age{
+  margin:10px 0;
+  font-size:2rem;
+}
+.page4_message_2{
+  font-size: 1.8rem;
+  margin: 20px 5%;
+  color: white;
+  border-radius: 30px;
+  background-color: #0071BB;
+  padding: 10px;
+}
+
+.page4_message_3{
+  text-align: left;
+  margin:10px 5% 20px 5%;
+  padding:40px 0 40px 3%;
+  background-color: rgba(255, 255, 255, 0.7);
+  font-size:1.4rem;
+  height:420px;
+  border-radius: 30px;
+}
+
+.page5_message_1_image_box{
+  margin:0 21% 30px 21%;
+  width:600px;
+  background-color: white;
+  height:480px;
+  text-align: center;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.page5_message_1_image{
+  padding:20px;
+}
+
+.page5_message_1_image_text{
+  margin-top:5px;
+  font-size:1.8rem;
+}
+
+
+.No2{
+  display:inline-block;
+  font-size: 1.8rem;
+  color:white;
+  background-color: #0071BB;
+  padding:25px;
+  border-radius: 150px;
+}
+
+.page6_message_1{
+  font-size:1.5rem;
+  margin:60px 0 50px 15%;
+}
+
+.page6_message_image1{
+  position: absolute;
+  left:13%;
+  top:11800px;
+}
+.page6_message_image2{
+  position: absolute;
+  left:13%;
+  top:12020px;
+}
+.page6_message_image3{
+  position: absolute;
+  left:13%;
+  top:12230px;
+}
+.page6_message_image4{
+  position: absolute;
+  left:75%;
+  top:12790px;
+}
+
+
+.infomation{
+  margin:11px 0 9px 0;
+  font-size:3rem;
+}
+.infomation_line{
+  width:30%;
+  margin:0 35%;
+  height:1px;
+  border-bottom: solid 1.5px #333333;
+}
+.infomation_image{
+  margin:20px 0;
+  font-size:2.0rem;
+}
+
+.infomation_map{
+  margin:20px 10%;
+}
+
+.infomation_message{
+  font-size:1.8rem;
+  margin: 30px 5%;
+  padding:10px;
+  color:white;
+  background-color: #0071BB;
+  border-radius: 60px;
+}
+.infomation_message_text{
+  font-size:1.8rem;
+}
+
+@media screen  and (min-width: 1000px) {
+
+
+ 
+
+
+
+
+
+  .page3_message_3_image{
+    top: 4530px;
+  }
+
+
+  .page6_message_image1{
+
+    top: 11830px;
+  }
+  .page6_message_image2{
+
+    top: 12040px;
+  }
+  .page6_message_image3{
+
+    top: 12250px;
+  }
+  .page6_message_image4{
+
+    top: 12810px;
+  }
+}
+
+
+
+@media screen  and (min-width: 1025px) {
+  body {
+    height: 15800px;
+  }
+  .page1_message_2_2{
+    font-size:3.5rem;
+  }
+  .page1_message_2_1 {
+    font-size:7rem;
+  }
+  .page1_message_5{
+    top: 1000px;
+  }
+  .page1_message_image{
+    top: 740px;
+  }
+  .page1_message_6{
+    margin: 10px 0 10px 20%;
+  }
+  .page2_message_3_1_1{
+    font-size:3.0rem;
+  }
+  .page2_message_3_image{
+    margin: 0 35%;
+  }
+  .page2_message_3_abusolute{
+    top: 2700px;
+    left: 23%;
+  }
+  .page2_message_3_abusolute:before {
+    left: 50%;
+  }
+  .page2_message_4_abusolute {
+    font-size: 1.6rem;
+    position: absolute;
+    background-color: #0099ff;
+    padding: 5% 1%;
+    color: white;
+    top: 3650px;
+    left: 7%;
+  }
+  
+  .page2_message_4_abusolute:before {
+    border: solid transparent;
+    content: "";
+    height: 0;
+    width: 0;
+    pointer-events: none;
+    position: absolute;
+    border-color: rgba(0, 153, 255, 0);
+    border-top-width: 42px;
+    border-bottom-width: 42px;
+    border-left-width: 49px;
+    border-right-width: 49px;
+    margin-left: -49px;
+    border-bottom-color: #0099ff;
+    bottom: 100%;
+    left: 47%;
+  }
+  .page2_message_4_5{
+    margin-top:450px;
+  }
+  .page2_message_4_1_1{
+    font-size:2.2rem;
+  }
+  .page2_message_4_image{
+    margin: 40px 29%;
+  }
+  .page3_message_3_image{
+    left: 73%;
+    top:4810px;
+  }
+  .page5_message_1_image_box{
+    margin: 0 30% 30px 30%;
+  }
+  .page4_message_3{
+    font-size:1.8rem;
+    height: 540px;
+  }
+  .page6_message_image1{
+    left:16%;
+    top:12460px;
+  }
+  .page6_message_image2{
+    left:16%;
+    top:12670px;
+  }
+  .page6_message_image3{
+    left:16%;
+    top:12890px;
+  }
+  .page6_message_image4{
+    left:70%;
+    top:13440px;
+  }
+}
+
