--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Revolve theme
 Description: Revolve theme
 Version: 1.0
-Author: 
+Author:
 */
 
 @import url("css/normalize.css");
@@ -58,13 +58,13 @@ main {
 .page1_message_2_1 {
   font-size: 6rem;
   font-weight: bold;
-  text-shadow: 7px 7px 3px #808080; 
+  text-shadow: 7px 7px 3px #808080;
   text-decoration:underline;
   text-decoration-color:white;
   text-decoration-thickness: 40px;
   text-decoration-skip-ink: none;
   text-underline-offset: -50px;
-  
+
 }
 .page1_message_2_2{
   font-weight:bold;
@@ -174,7 +174,7 @@ main {
   text-decoration-thickness: 20px;
   text-decoration-skip-ink: none;
   text-underline-offset: -25px;
- 
+
 }
 .page2_message_2_6 {
   font-size: 1rem;
@@ -217,6 +217,7 @@ main {
   list-style-image: url("image/fin.png");
   /* padding-left:15px; */
   line-height: 10px;
+	transform: translateY(-20px);
 }
 
 .page2_message_3_image {
@@ -301,6 +302,7 @@ main {
   list-style-image: url("image/fin.png");
   /* padding-left:15px; */
   line-height: 10px;
+	transform: translateY(-20px);
 }
 .page2_message_4_2 {
   margin-top: 80px;
@@ -414,8 +416,18 @@ main {
   font-size:2rem;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
+  display:flex;
 }
-
+.tr{
+  width: 0px;
+  height:0px;
+  border-top: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-left: 40px solid #fff;
+  transform: translateY(26px);
+  padding-left: 20px;
+}
 .page3_message_2_{
   font-size:2.5rem;
   margin: 60px 5% 40px 5%;
@@ -615,7 +627,7 @@ main {
 @media screen  and (min-width: 1000px) {
 
 
- 
+
 
 
 
@@ -687,7 +699,7 @@ main {
     top: 3650px;
     left: 7%;
   }
-  
+
   .page2_message_4_abusolute:before {
     border: solid transparent;
     content: "";
@@ -742,4 +754,3 @@ main {
     top:13440px;
   }
 }
-
