--- a/style.css
+++ b/style.css
@@ -623,14 +623,21 @@ main {
   font-size:1.8rem;
 }
 
+.page2_message_4_6{
+    color: white;
+    background-color: #0071BB;
+    margin: 3% 28%;
+    padding: 1% 3%;
+    text-align: center;
+    border-radius: 60px;
+    box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 50%);
+}
+
+.video {
+	text-align: center;
+}
+
 @media screen  and (min-width: 1000px) {
-
-
-
-
-
-
-
 
   .page3_message_3_image{
     top: 4530px;
@@ -653,10 +660,11 @@ main {
 
     top: 12810px;
   }
+
+  .page2_message_4_6{
+    margin: 3% 20%;
+  }
 }
-
-
-
 @media screen  and (min-width: 1025px) {
   body {
     height: 15800px;
@@ -751,5 +759,19 @@ main {
   .page6_message_image4{
     left:70%;
     top:13760px;
+  }
+}
+
+
+
+@media screen  and (min-width: 400px) {	
+	.page2_message_4_6 {
+    color: white;
+    background-color: #0071BB;
+    margin: 3% 16%;
+    padding: 1% 3%;
+    text-align: center;
+    border-radius: 60px;
+    box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 50%);
   }
 }
