--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ main {
 }
 
 .page2_message_4 {
-  margin: 350px 0;
+  margin: 350px 0 200px 0;
 }
 
 .page2_message_4_image {
@@ -641,7 +641,7 @@ footer {
 	 position: fixed;
     bottom: 0px;
 	 width: 80%;
-    margin: 20px 10%;
+    margin: 20px 8%;
     padding: 40px;
     color: white;
     background-color: hotpink;
@@ -649,6 +649,11 @@ footer {
     box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 50%);
     border-radius: 20px;
     display: flex;
+}
+
+footer:hover {
+  	transform: scale(1.1);	/*画像の拡大率*/
+	transition-duration: 0.3s;	/*変化に掛かる時間*/
 }
 .footer-btn{
 	width:100%;
@@ -669,6 +674,12 @@ footer {
     margin-left: 20px;
     float: left;
 }
+
+
+
+
+
+
 
 
 
@@ -702,6 +713,13 @@ footer {
     margin: 3% 20%;
 	}  
 }
+
+
+
+
+
+
+
 
 @media screen  and (min-width: 1025px) {
   body {
@@ -805,6 +823,7 @@ footer {
 
 
 @media screen  and (max-width: 1024px ) {	
+	
 	.page2_message_4_6 {
     color: white;
     background-color: #0071BB;
@@ -814,6 +833,11 @@ footer {
     border-radius: 60px;
     box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 50%);
   }
+	
+	footer{
+	  margin: 20px 7%;
+	}
+	
 	.footer-text{
 		padding-left: 10%;
 	}
