--- a/style.css
+++ b/style.css
@@ -43,16 +43,15 @@ main {
   width: 80%;
   height: 1px;
   text-align: center;
-  margin: 0 10% 5% 10%;
+  margin: 0 10% 15% 10%;
   border-bottom: solid 3px #333333;
 }
 
 .page1_message_2 {
-  margin: 0 10% 3%;
-  font-size: 2.5rem;
+  margin: 0 9% 1%;
+  font-size: 3rem;
   float: left;
   height: 80px;
-  width: 40%;
 }
 .page1_message_2_1 {
   font-size: 6rem;
@@ -71,7 +70,7 @@ main {
 }
 
 .page1_message_4 {
-  margin: 7% 0;
+  margin: 15% 0;
   background-color: rgba(255, 255, 255, 0.5);
   padding: 3%;
 }
@@ -88,12 +87,12 @@ main {
 }
 .page1_message_4_title_1_1 {
   font-weight:bold;
-  font-size: 1.3rem;
+  font-size: 1.8rem;
   margin: 5px;
 }
 .page1_message_4_title_1_2 {
   font-weight:bold;
-  font-size: 1.3rem;
+  font-size: 1.8rem;
   margin: 5px;
   color:red;
 }
@@ -129,7 +128,7 @@ main {
 
 .page1_message_6 {
   font-size: 2rem;
-  margin: 10px 0 10px 15%;
+  margin: 10px 0 100px 15%;
   font-weight: bold;
 }
 .page1_message_6_1 {
@@ -148,7 +147,7 @@ main {
 
 .page2_message_2 {
   text-align: center;
-  margin-top: 300px;
+  margin-top: 350px;
   font-size: 2.5rem;
   font-weight: bold;
 }
@@ -183,15 +182,16 @@ main {
 .page2_message_3 {
   text-align: center;
   font-size: 1.5rem;
-  padding-bottom: 10px;
+  padding-bottom: 100px;
 }
 .page2_message_2_7 {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 
 .page2_message_3_title {
   text-align: center;
   font-size: 3rem;
+  margin-bottom: 50px;
 }
 .page2_message_3_title_line {
   margin: 10px 40%;
@@ -365,7 +365,7 @@ main {
 }
 
 .page3_message_title_sub {
-  margin: 10px 20%;
+  margin: 30px 20%;
   font-size: 1.5rem;
   background-color: #0071BB;
   color: white;
@@ -391,7 +391,7 @@ main {
 }
 
 .page3_message_3__ {
-  font-size: 3.5rem;
+  font-size: 4rem;
 }
 
 .page3_message_3_1_img{
@@ -454,7 +454,7 @@ main {
 }
 .page3_message_4{
   font-size:2rem;
-  margin:20px 5%;
+  margin:100px 5% 50px 5%;
   color:white;
   border-radius: 30px;
   background-color: #0071BB;
@@ -489,7 +489,7 @@ main {
 
 .page3_message_6{
   font-size: 1.6rem;
-  margin:40px 0 30px 0;
+  margin:40px 0 50px 0;
 }
 
 .page3_message_8{
@@ -503,7 +503,7 @@ main {
 
 .page3_message_9{
   font-size:2.2rem;
-  margin-bottom: 60px;
+  margin-bottom: 100px;
 }
 
 .page4_message_1{
@@ -529,7 +529,7 @@ main {
 
 .page4_message_3{
   text-align: left;
-  margin:10px 5% 20px 5%;
+  margin:10px 5% 100px 5%;
   padding:40px 0 40px 3%;
   background-color: rgba(255, 255, 255, 0.7);
   font-size:1.4rem;
@@ -608,11 +608,11 @@ main {
 }
 
 .infomation_map{
-  margin:20px 10%;
+  margin: 40px 10% 80px;
 }
 
 .infomation_message{
-  font-size:1.8rem;
+  font-size:2.5rem;
   margin: 30px 5%;
   padding:10px;
   color:white;
@@ -620,7 +620,7 @@ main {
   border-radius: 60px;
 }
 .infomation_message_text{
-  font-size:1.8rem;
+  font-size:2.4rem;
 }
 
 .page2_message_4_6{
@@ -738,7 +738,7 @@ footer:hover {
     top: 1014px;
   }
   .page1_message_6{
-    margin: 10px 0 10px 20%;
+    margin: 10px 0 100px 20%;
   }
   .page2_message_3_1_1{
     font-size:3.0rem;
