--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ main {
   font-size: 1.7rem;
 }
 .page2_message_3_abusolute_2 {
-  color: red;
+  color: #ff0;
 }
 
 .page2_message_4 {
@@ -293,7 +293,6 @@ main {
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 .page2_message_4_1_1 {
-  /* font-size: 2.2rem; */
   font-size: 1.6rem;
   /* display: table-cell; */
   list-style-image: url("image/fin.png");
@@ -307,7 +306,8 @@ main {
 }
 
 .page2_message_4_abusolute {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
+  line-height: 1.2em;
   position: absolute;
   background-color: #0099ff;
   padding: 5% 1%;
@@ -337,7 +337,7 @@ main {
 }
 
 .page2_message_4_abusolute_1 {
-  color: red;
+  color: #ffff00f5;
 }
 
 .page2_message_4_5 {
@@ -396,7 +396,7 @@ main {
   padding-right:10px;
 }
 .price2980{
-  color:red;
+  color: red;
 }
 
 .page3_message_3_image{
@@ -836,6 +836,29 @@ footer:hover {
     font-size: 2rem;
 }
 	
+.page2_message_3_abusolute_1 {
+    font-size: 2.5rem;
+    line-height: 1.3em;
+}
+	
+.page2_message_3_abusolute {
+    font-size: 2.5rem;
+    line-height: 1.3em;
+}
+	
+.page2_message_4_abusolute {
+    font-size: 2.5rem;
+    line-height: 1.5em;
+}
+	
+.page2_message_4_1_1 {
+    font-size: 2.2rem;
+}
+	
+.page2_message_4_5 {
+    margin: 3% 20%;
+}
+	
 	.page2_message_2_7 {
     font-size: 2rem;
 }
@@ -844,6 +867,57 @@ footer:hover {
   margin: 40px 0 30px 0;
   font-size:1.8rem;
 }
+	.page2_message_4_6 {
+    margin: 3% 3%;
+}
+
+
+.page2_message_4_6 {
+   margin: 8% 7% 4%;
+}
+	
+.page3_message_5 {
+    font-size: 2rem;
+}
+	
+.page2_message_4_image {
+    margin-top: 60px;
+    margin: 40px 90px;
+}
+
+.iframe {
+    width: 850;
+    height: 600;
+}
+	
+.page3_message_6 {
+    font-size: 1.9rem;
+}
+	
+.page3_message_title_sub {
+    margin: 30px 10%;
+    font-size: 2.5rem;
+}
+	
+.page3_message_box {
+    margin: 300px 5% 30px 5%;
+}
+	
+.page3_message_3 {
+    font-size: 2rem;
+    margin: 20px 5% 30px 5%;
+}
+	
+.page4_message_3 {
+    margin: 30px 5% 100px 5%;
+    padding: 40px 0 40px 3%;
+    font-size: 2rem;
+}
+
+	.google_map{
+     width: 900;
+     height: 700;
+	}
 
 	footer{
 	  margin: 20px 7%;
