--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ main {
   height: 80px;
 }
 .page1_message_2_1 {
+	color: #ff0023;
   font-size: 6rem;
   font-weight: bold;
   text-shadow: 7px 7px 3px #808080;
@@ -61,11 +62,12 @@ main {
   text-decoration-thickness: 40px;
   text-decoration-skip-ink: none;
   text-underline-offset: -50px;
-
+ 
 }
 .page1_message_2_2{
   font-weight:bold;
-  line-height:4rem
+  line-height:4rem;
+  float: left;
 }
 
 .page1_message_4 {
@@ -260,7 +262,14 @@ main {
 
 .page2_message_4 {
   margin: 350px 0 200px 0;
+  text-align: center;
 }
+
+.page2_message_10{
+  margin: 350px 0 200px 0;
+  text-align: center;
+}
+    
 
 .page2_message_4_image {
   margin-top: 60px;
@@ -278,10 +287,6 @@ main {
 }
 .page2_message_3_abusolute_2 {
   color: #ff0;
-}
-
-.page2_message_4 {
-  text-align: center;
 }
 
 .page2_message_4_1 {
@@ -532,7 +537,6 @@ main {
   padding:40px 0 40px 3%;
   background-color: #ff000005;
   font-size:1.4rem;
-  height:420px;
   border-radius: 30px;
 }
 
@@ -674,6 +678,32 @@ footer:hover {
     float: left;
 }
 
+.eye_catch{
+	text-align: center;
+	font-size: 5rem;
+	color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -717,9 +747,6 @@ footer:hover {
 
 
 
-
-
-
 @media screen  and (min-width: 1025px) {
   body {
     height: 15800px;
@@ -731,10 +758,10 @@ footer:hover {
     font-size:7rem;
   }
   .page1_message_5{
-    top: 1270px;
+    top: 1610px;
   }
   .page1_message_image{
-    top: 1014px;
+     top: 1345px;
   }
   .page1_message_6{
     margin: 10px 0 100px 20%;
@@ -746,8 +773,8 @@ footer:hover {
     margin: 0 35%;
   }
   .page2_message_3_abusolute{
-    top: 2950px;
-    left: 23%;
+    top: 3710px;
+    right: 5%;
   }
   .page2_message_3_abusolute:before {
     left: 50%;
@@ -755,10 +782,10 @@ footer:hover {
   .page2_message_4_abusolute {
     font-size: 1.6rem;
     position: absolute;
+    top: 4750px;
     background-color: #0099ff;
     padding: 5% 1%;
     color: white;
-    top: 3900px;
     left: 7%;
   }
 
@@ -790,7 +817,7 @@ footer:hover {
   }
   .page3_message_3_image{
     left: 73%;
-    top:5060px;
+    top: 6500px;
   }
   .page5_message_1_image_box{
     margin: 0 30% 30px 30%;
@@ -801,19 +828,19 @@ footer:hover {
   }
   .page6_message_image1{
     left:16%;
-    top:12770px;
+    top: 14470px;
   }
   .page6_message_image2{
     left:16%;
-    top:12990px;
+    top: 14680px;
   }
   .page6_message_image3{
     left:16%;
-    top:13200px;
+    top: 14900px;
   }
   .page6_message_image4{
     left:70%;
-    top:13760px;
+    top: 15495px;
   }
 }
 
@@ -821,108 +848,153 @@ footer:hover {
 
 
 
-@media screen  and (max-width: 1024px ) {	
-	
-	.page2_message_4_6 {
-    color: white;
-    background-color: #0071BB;
-    margin: 3% 16%;
-    padding: 1% 3%;
-    text-align: center;
-    border-radius: 60px;
-    box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 50%);
+
+@media screen  and (max-width: 999px ) {
+
+	.page1_message_2 {
+     margin: 0 10px 0 50px;
   }
 	
-.page2_message_3 {
-    font-size: 2rem;
-}
+  .page1_message_5 {
+    top: 1400px;
+  }
 	
-.page2_message_3_abusolute_1 {
-    font-size: 2.5rem;
-    line-height: 1.3em;
-}
-	
-.page2_message_3_abusolute {
-    font-size: 2.5rem;
-    line-height: 1.3em;
-}
-	
-.page2_message_4_abusolute {
-    font-size: 2.5rem;
-    line-height: 1.5em;
-}
-	
-.page2_message_4_1_1 {
-    font-size: 2.2rem;
-}
-	
-.page2_message_4_5 {
-    margin: 3% 20%;
-}
-	
-	.page2_message_2_7 {
-    font-size: 2rem;
-}
+	.page1_message_image {
+     display:none;
+   }
 
-.page3_message_8{
-  margin: 40px 0 30px 0;
-  font-size:1.8rem;
-}
+	.page1_message_image {
+		position: absolute;
+		left: 64%;
+		top: 1200px;
+	}
+
+	.page2_message_3 {
+		font-size: 2rem;
+	}
+
+	.page2_message_3_abusolute {
+	   font-size: 2.5rem;
+	   line-height: 1.3em;
+		top: 3510px;
+	}
+
+	.page2_message_3_abusolute_1 {
+		font-size: 2.5rem;
+		line-height: 1.3em;
+	}
+
+	.page2_message_4 {
+		margin: 680px 0 1400px 0;
+	}
+
+	.page2_message_100 {
+	  margin: 350px 0 200px 0;
+	}
+
+	.page2_message_4_abusolute {
+		font-size: 2.5rem;
+		line-height: 1.5em;
+		top: 4950px;
+	}
+
+	.page2_message_4_1_1 {
+		font-size: 2.2rem;
+		 line-height: 60px;
+		transform: translateY(0px);
+	}
+
+	.page2_message_4_5 {
+		margin: 3% 20%;
+	}
+
+		.page2_message_2_7 {
+		font-size: 2rem;
+	}
+
+	.page3_message_3_image {
+		top: 8650px;
+	}
+
+	.page3_message_8{
+	  margin: 40px 0 30px 0;
+	  font-size:1.8rem;
+	}
+		.page2_message_4_6 {
+		margin: 3% 3%;
+	}
+
+
 	.page2_message_4_6 {
-    margin: 3% 3%;
-}
+	   margin: 8% 7% 4%;
+	}
 
+	.page3_message_5 {
+		font-size: 2rem;
+	}
 
-.page2_message_4_6 {
-   margin: 8% 7% 4%;
-}
-	
-.page3_message_5 {
-    font-size: 2rem;
-}
-	
-.page2_message_4_image {
-    margin-top: 60px;
-    margin: 40px 90px;
-}
+	.page2_message_4_image {
+		margin-top: 60px;
+		margin: 40px 90px;
+	}
 
-.iframe {
-    width: 850;
-    height: 600;
-}
-	
-.page3_message_6 {
-    font-size: 1.9rem;
-}
-	
-.page3_message_title_sub {
-    margin: 30px 10%;
-    font-size: 2.5rem;
-}
-	
-.page3_message_box {
-    margin: 300px 5% 30px 5%;
-}
-	
-.page3_message_3 {
-    font-size: 2rem;
-    margin: 20px 5% 30px 5%;
-}
-	
-.page4_message_3 {
-    margin: 30px 5% 100px 5%;
-    padding: 40px 0 40px 3%;
-    font-size: 2rem;
-}
-	
-.page3_message_title {
-    padding: 120px 0 20px;
-}
+	.iframe {
+		width: 850;
+		height: 600;
+	}
 
-.google_map{
-   width: 900;
-   height: 700;
-}
+	.page3_message_6 {
+		font-size: 1.9rem;
+	}
+
+	.page3_message_title_sub {
+		margin: 30px 10%;
+		font-size: 2.5rem;
+	}
+
+	.page3_message_box {
+		margin: 300px 5% 170px 5%;
+	}
+
+	.page3_message_3 {
+		font-size: 2rem;
+		margin: 20px 5% 30px 5%;
+	}
+
+	.page4_message_3 {
+		margin: 30px 5% 100px 5%;
+		padding: 40px 0 40px 3%;
+		font-size: 2rem;
+	}
+
+	.page3_message_title {
+		padding: 120px 0 20px;
+	}
+
+	.page6_message_image1 {
+		top: 17835px;
+	}
+
+	.page6_message_image2 {
+		top: 18050px;
+	}
+
+	.page6_message_image3 {
+		top: 18260px;
+	}
+
+	.page6_message_image4 {
+		top: 19000px;
+	}
+
+	.infomation_map {
+	  margin: 20px 0 100px;
+	}
+
+  .google_map {
+	   width: 900;
+	   height: 700;
+	}
 
 	footer{
 	  margin: 20px 7%;
