--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ main {
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 .page2_message_4_1_1 {
-  font-size: 1.6rem;
+  font-size: 2.2rem;
   /* display: table-cell; */
   list-style-image: url("image/fin.png");
   /* padding-left:15px; */
@@ -806,14 +806,12 @@ footer:hover {
   .page2_message_4_5{
     margin-top:450px;
   }
-  .page2_message_4_1_1{
-    font-size:2.2rem;
-  }
+	
   .page2_message_4_image{
     margin: 40px 29%;
   }
   .page3_message_3_image{
-    left: 73%;
+    left: 68%;
     top: 6500px;
   }
   .page5_message_1_image_box{
@@ -825,19 +823,19 @@ footer:hover {
   }
   .page6_message_image1{
     left:16%;
-    top: 14470px;
+    top: 14550px;
   }
   .page6_message_image2{
     left:16%;
-    top: 14680px;
+    top: 14760px;
   }
   .page6_message_image3{
     left:16%;
-    top: 14900px;
+    top: 14980px;
   }
   .page6_message_image4{
     left:70%;
-    top: 15495px;
+    top: 15580px;
   }
 }
 
@@ -847,10 +845,6 @@ footer:hover {
 
 
 @media screen  and (max-width: 999px ) {
-	
-	.page1_message_2 {
-     margin: 0 10px 0 50px;
-  }
 	
   .page1_message_5 {
     top: 1400px;
@@ -873,7 +867,7 @@ footer:hover {
 	.page2_message_3_abusolute {
 	   font-size: 2.5rem;
 	   line-height: 1.3em;
-		top: 3510px;
+		top: 3610px;
 	}
 
 	.page2_message_3_abusolute_1 {
@@ -892,9 +886,14 @@ footer:hover {
 	.page2_message_4_abusolute {
 		font-size: 2.5rem;
 		line-height: 1.5em;
-		top: 4950px;
+		top: 5050px;
 	}
-
+	
+	.page2_message_3_1_1 {
+    line-height: 60px;
+    transform: translateY(0px);
+}
+	
 	.page2_message_4_1_1 {
 		font-size: 2.2rem;
 		 line-height: 60px;
@@ -910,7 +909,7 @@ footer:hover {
 	}
 
 	.page3_message_3_image {
-		top: 8650px;
+		top: 8735px;
 	}
 
 	.page3_message_8{
@@ -969,19 +968,19 @@ footer:hover {
 	}
 
 	.page6_message_image1 {
-		top: 17835px;
+		top: 18040px;
 	}
 
 	.page6_message_image2 {
-		top: 18050px;
+		top: 18250px;
 	}
 
 	.page6_message_image3 {
-		top: 18260px;
+		top: 18460px;
 	}
 
 	.page6_message_image4 {
-		top: 19000px;
+		 top: 19200px;
 	}
 
 	.infomation_map {
