--- a/style.css
+++ b/style.css
@@ -168,12 +168,13 @@ main {
 }
 .page2_message_2_5 {
   font-size: 2.8rem;
-  text-decoration : underline;
+	color: red;
+/*   text-decoration : underline;
   text-decoration-color:white;
   text-decoration-thickness: 20px;
   text-decoration-skip-ink: none;
   text-underline-offset: -25px;
-
+ */
 }
 .page2_message_2_6 {
   font-size: 1rem;
