--- a/style.css
+++ b/style.css
@@ -7,10 +7,67 @@ Author:
 
 @import url("css/normalize.css");
 
+
+/* ここからfrontページ用CSS */
+
+
+header {
+}
+
+.front-header_box {
+	 position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    letter-spacing: 2px;
+    background-color:#f4f5f7;;
+}
+
+.logo {
+	position: absolute;
+}
+
+.header-logo {
+}
+
+.header_menu{
+	position: absolute;
+	right: 0;
+}
+
+.menu_btn {
+	color: #fff;
+	font-size: 16px;
+	font-weight: bold;
+	background: #ffa83d;
+	border: none;
+	width: 160px;
+	height: 80px;
+	overflow: hidden;
+	position: relative;
+	cursor: pointer;
+	outline: none;
+}
+
+
+.front-img {
+	width: 100%;
+}
+
+
+
+
+/* ここまでfrontページ用CSS */
+
+
+
+
 body {
   background-color: #f4f5f7;
   height: 15000px;
-  width: 110vw;
+  width: 100%;
   font-weight:bold;
 }
 ol {
@@ -62,7 +119,7 @@ main {
   text-decoration-thickness: 40px;
   text-decoration-skip-ink: none;
   text-underline-offset: -50px;
- 
+  position: relative;
 }
 .page1_message_2_2{
   font-weight:bold;
@@ -74,6 +131,7 @@ main {
   margin: 15% 0;
   background-color: #ff00a51f;
   padding: 3%;
+  position: relative
 }
 .page1_message_4_title {
   text-align: center;
@@ -319,7 +377,6 @@ main {
   padding: 5% 1%;
   color: white;
   top: 3690px;
-  left: 7%;
   border-radius: 20px;
   width: 95%;
 }
@@ -758,10 +815,10 @@ footer:hover {
     font-size:7rem;
   }
   .page1_message_5{
-    top: 1610px;
+    top: 1550px;
   }
   .page1_message_image{
-     top: 1345px;
+     top: 1286px;
   }
   .page1_message_6{
     margin: 10px 0 100px 20%;
@@ -771,21 +828,22 @@ footer:hover {
     margin: 0 35%;
   }
   .page2_message_3_abusolute{
-    top: 3710px;
-    right: 5%;
+    top: 570px;
+    left: 21%;
   }
   .page2_message_3_abusolute:before {
     left: 50%;
   }
   .page2_message_4_abusolute {
     font-size: 1.6rem;
-    position: absolute;
-    top: 4750px;
-    background-color: #0099ff;
+    top: 4670px;
     padding: 5% 1%;
-    color: white;
-    left: 7%;
+    left: 2%;
   }
+	
+	.page2_message_4_1_1 {
+  font-size: 2rem;
+}
 
   .page2_message_4_abusolute:before {
     border: solid transparent;
@@ -802,7 +860,7 @@ footer:hover {
     margin-left: -49px;
     border-bottom-color: #0099ff;
     bottom: 100%;
-    left: 47%;
+    left: 50%;
   }
   .page2_message_4_5{
     margin-top:450px;
