--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ main {
   text-decoration-thickness: 40px;
   text-decoration-skip-ink: none;
   text-underline-offset: -50px;
-  position: relative;
+  padding-left: 10%;
 }
 .page1_message_2_2{
   font-weight:bold;
@@ -283,7 +283,7 @@ main {
   padding: 10px;
   background-color: white;
   width: 420px;
-  margin: 0 30%;
+  margin: 0 auto;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 .page2_message_3_image_1 {
@@ -297,8 +297,9 @@ main {
   padding: 5% 1%;
   color: white;
   top: 570px;
-  left: 13%;
   border-radius: 20px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .page2_message_3_abusolute:before {
@@ -316,7 +317,7 @@ main {
   margin-left: -49px;
   border-bottom-color: #0099ff;
   bottom: 100%;
-  left: 47%;
+  left: 50%;
 }
 
 .page2_message_4 {
@@ -774,18 +775,10 @@ footer:hover {
 
 
 
-@media screen  and (min-width: 1000px) {
-
-  .page2_message_4_6{
-    margin: 3% 20%;
-	}  
-}
 
 
 
-
-
-@media screen  and (min-width: 1025px) {
+@media screen and (max-width: 1200px) {
   body {
     height: 15800px;
   }
@@ -872,7 +865,28 @@ footer:hover {
 
 
 
-@media screen  and (max-width: 999px ) {
+
+
+@media screen and (max-width: 991px) {
+
+  .page2_message_4_6{
+    margin: 3% 20%;
+	}  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 767px) {
 	
 	.page1_message_image {
      display:none;
