--- a/style.css
+++ b/style.css
@@ -262,21 +262,24 @@ main {
 }
 .page2_message_3_1 {
   color: white;
-
   background-color: #0071BB;
   margin: 3% 7%;
-  padding: 1% 7%;
+  padding: 1% 3%;
   text-align: center;
   border-radius: 60px;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+  height: 60px;
 }
-.page2_message_3_1_1 {
-  font-size: 2.2rem;
-  /* display: table-cell; */
+
+.point-title {
+  font-size: 2rem;
   list-style-image: url("image/fin.png");
-  /* padding-left:15px; */
   line-height: 10px;
-	transform: translateY(-20px);
+  transform: translateY(-50%);
+}
+
+.page2_message_3_1_1 {
+	transform: translateY(-65px);
 }
 
 .page2_message_3_image {
@@ -296,7 +299,7 @@ main {
   background-color: #0099ff;
   padding: 5% 1%;
   color: white;
-  top: 570px;
+  top: 540px;
   border-radius: 20px;
   left: 50%;
   transform: translateX(-50%);
@@ -321,13 +324,13 @@ main {
 }
 
 .page2_message_4 {
-  margin: 350px 0 200px 0;
+  margin: 450px 0 200px 0;
   text-align: center;
 	position: relative;
 }
 
 .page2_message_10{
-  margin: 350px 0 200px 0;
+  margin: 500px 0 200px 0;
   text-align: center;
 }
     
@@ -359,14 +362,7 @@ main {
   border-radius: 60px;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
-.page2_message_4_1_1 {
-  font-size: 2.2rem;
-  /* display: table-cell; */
-  list-style-image: url("image/fin.png");
-  /* padding-left:15px; */
-  line-height: 10px;
-	transform: translateY(-20px);
-}
+
 .page2_message_4_2 {
   margin-top: 80px;
   font-size: 1.6rem;
@@ -379,9 +375,11 @@ main {
   background-color: #0099ff;
   padding: 5% 1%;
   color: white;
-  top: 640px;
+  top: 670px;
   border-radius: 20px;
   width: 95%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .page2_message_4_abusolute:before {
@@ -399,7 +397,7 @@ main {
   margin-left: -49px;
   border-bottom-color: #0099ff;
   bottom: 100%;
-  left: 47%;
+  left: 50%;
 }
 
 .page2_message_4_abusolute_1 {
@@ -535,7 +533,6 @@ main {
 .page3_message_5{
   margin:20px 0;
   font-size:1.8rem;
-  background-color: rgba(255, 255, 255, 0.7);
   padding:20px 0;
 }
 .page3_message_5_1{
@@ -602,7 +599,7 @@ main {
 }
 
 .page5_message_1_image_box{
-  margin:0 21% 30px 21%;
+  margin: 0 auto 30px;
   width:600px;
   background-color: white;
   height:480px;
@@ -690,7 +687,7 @@ main {
 .page2_message_4_6{
     color: white;
     background-color: #0071BB;
-    margin: 3% 28%;
+    margin: 3% 15%;
     padding: 1% 3%;
     text-align: center;
     border-radius: 60px;
@@ -808,9 +805,7 @@ footer:hover {
     left: 2%;
   }
 	
-	.page2_message_4_1_1 {
-  font-size: 2rem;
-}
+
 
   .page2_message_4_abusolute:before {
     border: solid transparent;
@@ -926,14 +921,9 @@ footer:hover {
 		line-height: 1.5em;
 		top: 740px;
 	}
+
 	
-	.page2_message_3_1_1 {
-    line-height: 60px;
-    transform: translateY(0px);
-}
-	
-	.page2_message_4_1_1 {
-		font-size: 2.2rem;
+	.point-title {
 		 line-height: 60px;
 		transform: translateY(0px);
 	}
