--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
   background-color: #f4f5f7;
   width: 100%;
   font-weight:bold;
+  font-family: Meiryo, "メイリオ", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", Osaka, Verdana, serif;
 }
 
 #container {
@@ -108,11 +109,7 @@ ol {
   font-size: 6rem;
   font-weight: bold;
   text-shadow: 7px 7px 3px #808080;
-  text-decoration:underline;
-  text-decoration-color:white;
-  text-decoration-thickness: 40px;
-  text-decoration-skip-ink: none;
-  text-underline-offset: -50px;
+  
   padding-left: 10%;
 }
 .page1_message_2_2{
@@ -1515,6 +1512,7 @@ ul {
 		top: 400px;
 		width: 90%;
 		font-size: 0.8rem;
+		font-weight: normal;
 	}
 	
 	.page2_message_3_abusolute:before {
@@ -1548,6 +1546,7 @@ ul {
 		font-size: 0.8rem;
 		line-height: 1.5em;
 		top: 480px;
+		font-weight: normal;
 	}
 	
 	  .page2_message_4_abusolute:before {
