--- a/style.css
+++ b/style.css
@@ -241,6 +241,8 @@ ol {
 }
 .page2_message_2_7 {
   font-size: 1.3rem;
+  display: block;
+  padding-top: 20px;
 }
 
 .page2_message_3_title {
@@ -290,9 +292,6 @@ ul {
   width: 420px;
   margin: 0 auto;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
-}
-.page2_message_3_image_1 {
-  margin: 10px;
 }
 
 .page2_message_3_abusolute {
@@ -725,26 +724,6 @@ ul {
 	text-align: center;
 }
 
-/* footer {
-	 position: fixed;
-    bottom: 0px;
-	 width: 80%;
-    margin: 20px 8%;
-    padding: 40px;
-    color: white;
-    background-color: hotpink;
-    font-size: 2rem;
-    box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 50%);
-    border-radius: 20px;
-    display: flex;
-} */
-
- footer:hover {
-  	transform: scale(1.1);	/*画像の拡大率*/
-	transition-duration: 0.3s;	/*変化に掛かる時間*/
-} 
-
-
 .tr2 {
     width: 0px;
     height: 0px;
@@ -833,8 +812,28 @@ ul {
     background-color: #f6ae55;
 }
 
+.yoyaku_box {
+	 width: 60%;
+    margin: 80px auto;
+    background-color: #ff62d6;
+    font-size: 2rem;
+    box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 50%);
+    border-radius: 90px;
+    line-height: 1px;
+    border: solid 1px #fff
+} 
 
+.yoyaku_box a {
+  color: #fff;
+	text-decoration: none;
+   display: block;
+	padding: 50px;
+}
 
+ .yoyaku_box:hover {
+  	transform: scale(1.1);	/*画像の拡大率*/
+	transition-duration: 0.3s;	/*変化に掛かる時間*/
+} 
 
 
 
@@ -1120,7 +1119,7 @@ ul {
 	
 	.point-title {
     line-height: 25px;
-    transform: none;
+    transform: translateY(5px);
     font-size: 1rem;
     padding: 10px 0 10px 30px;
     background-size: 30px;
@@ -1365,7 +1364,10 @@ ul {
    }
 }
 
-
+.yoyaku_box {
+    width: 75%;
+    font-size: 1.2rem;
+}
 
 
 
@@ -1388,6 +1390,7 @@ ul {
 	
 	.iframe {
      width: 100%;
+		height: 200px;
 	}
 	
 	.google_map {
@@ -1479,7 +1482,7 @@ ul {
 }
 	
 	 .page2_message_2_7 {
-	   font-size: 1rem;
+	   font-size: 0.8rem;
 	}
 	
 	.page2_message_3_title {
@@ -1564,11 +1567,14 @@ ul {
 	
 	.point-title {
     line-height: 25px;
-    transform: none;
     font-size: 0.8rem;
     padding: 10px 0 10px 30px;
     background-size: 30px;
 }
+	
+	.page2_message_4_1_1 {
+     transform: none;
+	}
 	
 .page2_message_4_2 {
     font-size: 0.8rem;
@@ -1661,7 +1667,7 @@ ul {
    }
 
 	.page4_message_3 {
-		font-size: 1rem;
+		font-size: 0.8rem;
 		margin: 30px 0 100px 0;
 		padding: 40px 0 40px 3%;
 	}
@@ -1811,5 +1817,15 @@ ul {
 	
 	.fix3 a {
     padding: 30px 0 0px 30%;
+   }
+	
+	.yoyaku_box {
+    width: 90%;
+    font-size: 1rem;
+    margin: 50px auto;
+   }
+	
+	.yoyaku_box a {
+    padding: 30px;
    }
 }
